--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@solana/web3.js": "^1.98.0",
     "lucide-react": "^0.479.0",
     "next": "15.2.2",
-    "qrcode.react": "^4.2.0",
+    "qrcode.react": "^3.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-qr-scanner": "^1.0.0-alpha.11",
+    "@yudiel/react-qr-scanner": "^2.2.1",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
